[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "s3ql"
version = "5.3.0"
description = "A full-featured file system for online data storage"
readme = "README.rst"
requires-python = ">=3.8"
license = { text = "GPLv3" }
authors = [
    { name = "Nikolaus Rath", email = "Nikolaus@rath.org" }
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: No Input/Output (Daemon)",
    "Environment :: Console",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (GPLv3)",
    "Topic :: Internet",
    "Operating System :: POSIX",
    "Topic :: System :: Archiving",
]

dependencies = [
    "apsw >= 3.42.0",
    "cryptography",
    "requests",
    "defusedxml",
    "google-auth",
    "google-auth-oauthlib",
    "trio >= 0.15",
    "pyfuse3 >= 3.2.0, < 4.0",
]

[project.scripts]
"mkfs.s3ql" = "s3ql.mkfs:main"
"fsck.s3ql" = "s3ql.fsck:main"
"mount.s3ql" = "s3ql.mount:main"
"umount.s3ql" = "s3ql.umount:main"
s3qlcp = "s3ql.cp:main"
s3qlstat = "s3ql.statfs:main"
s3qladm = "s3ql.adm:main"
s3qlctrl = "s3ql.ctrl:main"
s3qllock = "s3ql.lock:main"
s3qlrm = "s3ql.remove:main"
s3ql_oauth_client = "s3ql.oauth_client:main"
s3ql_verify = "s3ql.verify:main"

[tool.pytest.ini_options]
minversion = "3.7"
