[build-system]
requires = ["setuptools>=77.0.3", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "s3ql"
version = "5.4.2"
description = "A full-featured file system for online data storage"
readme = "README.rst"
requires-python = ">=3.9"
license = "GPL-3.0-only"
authors = [{ name = "Nikolaus Rath", email = "Nikolaus@rath.org" }]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: No Input/Output (Daemon)",
  "Environment :: Console",
  "Topic :: Internet",
  "Operating System :: POSIX",
  "Topic :: System :: Archiving",
]

dependencies = [
  # https://github.com/rogerbinns/apsw/issues/459
  "apsw >= 3.42.0",
  "cryptography",
  "requests",
  "defusedxml",
  "google-auth",
  "google-auth-oauthlib",
  "trio >= 0.15",
  "pyfuse3 >= 3.2.0, < 4.0",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-trio",
  "sphinx",
  "setuptools",
  "cython",
  "mypy",
  "types-defusedxml>=0.7.0.20240218",
  "types-docutils>=0.21.0.20241128",
  "pyright>=1.1.407",
  "types-pygments>=2.19.0.20251121",
]

[project.urls]
Homepage = "https://github.com/s3ql/s3ql"

[project.scripts]
"mkfs.s3ql" = "s3ql.mkfs:main"
"fsck.s3ql" = "s3ql.fsck:main"
"mount.s3ql" = "s3ql.mount:main"
"umount.s3ql" = "s3ql.umount:main"
s3qlcp = "s3ql.cp:main"
s3qlstat = "s3ql.statfs:main"
s3qladm = "s3ql.adm:main"
s3qlctrl = "s3ql.ctrl:main"
s3qllock = "s3ql.lock:main"
s3qlrm = "s3ql.remove:main"
s3ql_oauth_client = "s3ql.oauth_client:main"
s3ql_verify = "s3ql.verify:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/man/man1" = ["doc/manpages/*.1"]

[[tool.setuptools.ext-modules]]
name = "s3ql.sqlite3ext"
sources = ["src/s3ql/sqlite3ext.pyx"]
extra-compile-args = [
  "-Wall", "-Wextra",
  # Value-changing conversions should always be explicit.
  "-Wconversion",
  # Note that (i > -1) is false if i is unsigned (-1 will be converted to
  # a large positive value). We certainly don't want to do this by
  # accident.
  "-Wsign-compare",
  # These warnings have always been harmless, and have always been due to
  # issues in Cython code rather than S3QL. Cython itself warns if there
  # are unused variables in .pyx code.
  "-Wno-unused-parameter",
  "-Wno-unused-function",
]
language = "c++"
depends = ["src/s3ql/_sqlite3ext.cpp"]

[tool.ruff]
line-length = 100
exclude = [
   "rst/conf.py",
   ".venv/",
]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",

    "RUF100", # unused noqa comments
]

ignore= [
  'SIM108', # Do not favor ternary expressions over if statements
  'UP031',  # Old style string formatting is ok
  'B904',   # Implicitly chaining exceptions is fine
  'UP015',  # Explicit open mode is fine
  'UP045',  # Optional[X] is fine
]

[tool.mypy]
warn_unused_configs = true

# No type stubs available
[[tool.mypy.overrides]]
module = "pytest_trio"
ignore_missing_imports = true

# No type stubs available
[[tool.mypy.overrides]]
module = "google_auth_oauthlib.*"
ignore_missing_imports = true

[tool.pyright]
# We should really be more restrictive here, but there's too many false
# positives from old code that predates type-checking.
typeCheckingMode = "basic"
reportArgumentType = false
reportAttributeAccessIssue = false
reportOptionalCall = false
reportOptionalMemberAccess = false
reportOptionalOperand = false
reportOptionalSubscript = false
